--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
 							<div class="row">
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/my/5.jpg" alt="portfolio image"/>
+										<img src="assets/images/my/5.JPG" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="assets/download/academy/index.html">
 												경일게임아카데미
@@ -710,7 +710,7 @@
 								</div><!-- /.col -->
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/my/7.jpg" alt="portfolio image"/>
+										<img src="assets/images/my/7.JPG" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="http://3.23.215.94/">
 												AzitGallery
@@ -718,7 +718,7 @@
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/my/7.jpg" alt="portfolio image"/>
+										<img src="assets/images/my/7.JPG" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
 												관리자페이지
@@ -729,7 +729,7 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/my/8.jpg" alt="portfolio image"/>
+										<img src="assets/images/my/8.JPG" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="http://3.142.155.14/">
 												GAMGWI
@@ -737,7 +737,7 @@
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/my/9.jpg" alt="portfolio image"/>
+										<img src="assets/images/my/9.JPG" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="assets/download/esop/index.html">
 												esop
