--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/my/6.jpg" alt="portfolio image"/>
+										<img src="assets/images/my/6.JPG" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="assets/download/wozoo/index.html">
 												WoZoo
