--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
 									<div class="item">
 										<img src="assets/images/my/20.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
+											<a href="http://3.129.75.220/">
 												HoneyAnt
 											</a>
 										</div><!-- /.isotope-overlay -->
@@ -698,8 +698,8 @@
 									<div class="item">
 										<img src="assets/images/my/22.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												관리자페이지
+											<a href="http://3.22.145.185/">
+												학원사이트&관리자페이지
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
