--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<div class="header-text">
 							<h2>hi <span>,</span> My name is Ohmihee<br> I Am a Programmer  <br>  <span></span>   </h2>
 							<p></p>
-							<a href="assets/download/browney.txt" download>download resume</a>
+							<!-- <a href="assets/download/browney.txt" download>download resume</a> -->
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
