--- a/index.html
+++ b/index.html
@@ -685,6 +685,14 @@
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
+									<div class="item">
+										<img src="assets/images/my/image.png" alt="portfolio image"/>
+										<div class="isotope-overlay">
+											<a href="https://velog.io/@algml/litecoin-%EB%B9%8C%EB%93%9C%ED%95%B4%EB%B3%B4%EA%B8%B0">
+												코인빌드
+											</a>
+										</div><!-- /.isotope-overlay -->
+									</div><!-- /.item -->
 								</div><!-- /.col -->
 								<div class="col-sm-4">
 									<div class="item">
