--- a/assets/download/academy/index.html
+++ b/assets/download/academy/index.html
@@ -249,7 +249,7 @@
                     경일이야기
                 </h2>
                 <p>
-                    <img src="http://www.kiweb.or.kr/nBoard/upload/file/kistory//1638846205_56772_1.png" alt="">
+                    <img src="../../images/my/i2.png" alt="">
                     <a href="#">제2회 경일게임아카데미 *시네마데이*</a>
                 </p>
                 <ul>
@@ -270,7 +270,7 @@
                     유용정보
                 </h2>
                 <p>
-                    <img src="http://www.kiweb.or.kr/nBoard/upload/file/reporter//1584068873_28145_1.png" alt="">
+                    <img src="../../images/my/i3.png" alt="">
                     <a href="#">제2회 경일게임아카데미 *시네마데이*</a>
                 </p>
                 <ul>
@@ -291,7 +291,7 @@
                     교수칼럼
                 </h2>
                 <p>
-                    <img src="http://www.kiweb.or.kr/nBoard/upload/file/professor//1548912712_27057_1.png" alt="">
+                    <img src="../../images/my/i4.png" alt="">
                     <a href="#">제2회 경일게임아카데미 *시네마데이*</a>
                 </p>
                 <ul>
