--- a/index.html
+++ b/index.html
@@ -397,7 +397,8 @@
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
 										<span class="progressText">blockchain</span>
-										<div>각각 하드코딩과 오픈소스를 활용한 코인 빌드의 경험이 있습니다.</div>
+										<div>각각 하드코딩과 오픈소스를 활용한 코인 빌드가 가능합니다..</div>
+										<div>caver.js와 kip-17을 이용하여 스마트 컨트랙트 작성이 가능합니다. </div>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="10" aria-valuemax="100" style="">
