--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<script>
+			function alertbtn(){
+				alert('해당 사이트는 카이카스 지갑 설치 후 이용가능합니다.')
+			}
+		</script>
 
     </head>
 	
@@ -705,8 +710,8 @@
 									</div><!-- /.item -->
 								</div><!-- /.col -->
 								<div class="col-sm-4">
-									<div class="item">
-										<img src="assets/images/my/7.JPG" alt="portfolio image"/>
+									<div 	onclick="alert('해당 사이트는 카이카스 지갑 설치 후 이용가능합니다.')" class="item">
+										<img  src="assets/images/my/7.JPG" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="http://3.23.215.94/">
 												AzitGallery <br>(only chrome & need kaikas wallet)<br>(use kip-17,caver.js and make nft)
@@ -779,6 +784,7 @@
 		<!-- Include all js compiled plugins (below), or include individual files as needed -->
 
 		<script src="assets/js/jquery.js"></script>
+
         
         <!--modernizr.min.js-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
