--- a/assets/download/academy/index.html
+++ b/assets/download/academy/index.html
@@ -66,12 +66,12 @@
 				<li class="fadein"><img src="../../images/my/12.png" alt=""></li>
 			</ul>
         </div>
-        <ul id="bannerBtn">
-            <li onclick="bannerBtn(0)"><a class="before" href="#">취업1위</a></li>
-            <li onclick="bannerBtn(1)"><a class="before" href="#">화이팅</a></li>
-            <li onclick="bannerBtn(2)"><a class="before" href="#">아자아자</a></li>
-            <li onclick="bannerBtn(3)"><a class="before" href="#">오예예</a></li>
-        </ul>
+        <!-- <ul id="bannerBtn">
+            <li onclick="bannerBtn(0)"><a class="before" href="#"></a></li>
+            <li onclick="bannerBtn(1)"><a class="before" href="#"></a></li>
+            <li onclick="bannerBtn(2)"><a class="before" href="#"></a></li>
+            <li onclick="bannerBtn(3)"><a class="before" href="#"></a></li>
+        </ul> -->
         <div id="container1">
             <ul class="big_box">
                 <li class="box box1">
