--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
 									<div class="item">
 										<img src="assets/images/my/22.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="http://3.22.145.185/">
+											<a href="http://3.22.145.185/admin/login_on?topmenu=administrator&submenu=관리자리스트">
 												학원사이트&관리자페이지
 											</a>
 										</div><!-- /.isotope-overlay -->
