--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
 									<div class="item">
 										<img src="assets/images/my/20.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="http://3.129.75.220/">
+											<a href="http://3.38.68.37:3001/">
 												HoneyAnt
 											</a>
 										</div><!-- /.isotope-overlay -->
@@ -713,15 +713,15 @@
 									<div 	onclick="alert('해당 사이트는 카이카스 지갑 설치 후 이용가능합니다.')" class="item">
 										<img  src="assets/images/my/7.JPG" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="http://3.23.215.94/">
-												AzitGallery <br>(only chrome & need kaikas wallet)<br>(use kip-17,caver.js and make nft)
+											<a href="http://3.38.68.37/">
+												NFT MARKET <br>(only chrome & need kaikas wallet)<br>(use kip-17,caver.js and make nft)
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 									<div class="item">
 										<img src="assets/images/my/22.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="http://3.22.145.185/admin/login_on?topmenu=administrator&submenu=관리자리스트">
+											<a href="http://3.38.68.37:3003/admin/login_on?topmenu=administrator&submenu=%EA%B4%80%EB%A6%AC%EC%9E%90%EB%A6%AC%EC%8A%A4%ED%8A%B8">
 												학원사이트&관리자페이지
 											</a>
 										</div><!-- /.isotope-overlay -->
