--- a/index.html
+++ b/index.html
@@ -138,13 +138,17 @@
 									최종학력 : 단국대학교 졸업
 									<br/>
 									직업훈련 : 블록체인 기반 핀테크 및 응용 SW 개발자 양성과정 수료
+									<br/>
+									
 								</h3>
 								<p>
-									최후의 남는 자는 포기하지 않는 사람이다!!
+									무엇이든 최선을 다하자.
 									<br>
-									어린 시절부터 무엇하나 잘 하지 못하던 제가 가장 잘 하던 것은 포기하지 않고 끝까지 해나가는 것이었습니다. 
-									23명에서 시작한 훈련과정이 10명 가량으로 변할 때까지 약 10개월의 과정동안 프로젝트를 하느라 밤을 새기도 하고, 잘하는 사람들과 저를 비교하며 힘들기도 했지만 끝까지 해냄으로써 프로젝트를 마쳤을 때의 성취감을 배울 수 있었습니다.
-									앞으로는 현업에서 이러한 성취감을 얻을 수 있기를 바랍니다.
+									진부한 말임에도 불구하고, 무엇이든 최선을 다하고자 노력한다는 점이 저의 가장 큰 장점입니다.
+									흔히 뛰어난 개발자는 타고나야한다고 이야기히지만, 
+									저는 그것만큼 중요한 것이 꾸준히 지속적으로 노력하는 것이라 생각합니다.
+									앞으로 더욱 꾸준히 노력하며, 성장하는 개발자가 되겠습니다. 
+									<br>
 								</p>
 								<div class="row">
 									<div class="col-sm-4">
@@ -155,8 +159,8 @@
 									</div>
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
-											<h3>website</h3>
-											<p>ohmihee.github.io</p>
+											<h3>Blog</h3>
+											<a href="https://mihee0703.tistory.com">Tistory</a>
 										</div>
 									</div>
 									<div class="col-sm-4">
@@ -377,8 +381,8 @@
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">aws-ec2</span>
-										<div>aws-ec2를 활용하여 여러 차례의 배포 경험이 있습니다.</div>
+										<span class="progressText">aws</span>
+										<div>aws 서비스인 app runner, amplify, ec2를 통한 배포가 가능하며, rds를 사용할 수 있습니다.</div>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="10" aria-valuemax="100" style="">
@@ -389,8 +393,8 @@
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">react</span>
-										<div>리덕스-사가를 사용을 위한 세팅이 가능하며, 사용에 능합니다.</div>
+										<span class="progressText">ORM</span>
+										<div>sequelize, prisma 와 같은 ORM을 이용하여 api를 작성할 수 있습니다.</div>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="10" aria-valuemax="100" style="">
@@ -401,9 +405,8 @@
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">blockchain</span>
-										<div>각각 하드코딩과 오픈소스를 활용한 코인 빌드가 가능합니다..</div>
-										<div>caver.js와 kip-17을 이용하여 스마트 컨트랙트 작성이 가능합니다. </div>
+										<span class="progressText">swagger</span>
+										<div>swagger를 이용하여 api에 관한 문서화를 할 수 있습니다.</div>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="10" aria-valuemax="100" style="">
@@ -610,6 +613,20 @@
 							<div class="col-sm-3">
 								<div class="single-profile">
 									<div class="profile-txt">
+										<a href="https://mihee0703.tistory.com/"><i class="fas fa-clipboard"></i></a>
+										<div class="profile-icon-name">Tistory</div>
+									</div>
+									<div class="single-profile-overlay">
+										<div class="profile-txt">
+											<a href="https://mihee0703.tistory.com/"><i class="fas fa-clipboard"></i></a>
+											<div class="profile-icon-name">Tistory</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-3">
+								<div class="single-profile">
+									<div class="profile-txt">
 										<a href="https://velog.io/@algml"><i class="fab fa-blogger"></i></a>
 										<div class="profile-icon-name">velog</div>
 									</div>
@@ -631,20 +648,6 @@
 										<div class="profile-txt">
 											<a href="https://github.com/ohmihee"><i class="flaticon-dribbble"></i></a>
 											<div class="profile-icon-name">github</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="single-profile">
-									<div class="profile-txt">
-										<a href="https://www.notion.so/About-me-9a26ef04819246129fa33fd9fadf2f05"><i class="fas fa-clipboard"></i></a>
-										<div class="profile-icon-name">notion</div>
-									</div>
-									<div class="single-profile-overlay">
-										<div class="profile-txt">
-											<a href="https://www.notion.so/About-me-9a26ef04819246129fa33fd9fadf2f05"><i class="fas fa-clipboard"></i></a>
-											<div class="profile-icon-name">notion</div>
 										</div>
 									</div>
 								</div>
@@ -687,7 +690,7 @@
 									<div onclick="alert('해당 사이트는 카이카스 지갑 설치 후 이용가능합니다.')" class="item">
 										<img  src="assets/images/my/7.JPG" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="http://3.38.68.37/">
+											<a href="http://13.209.218.153:3000/">
 												NFT MARKET <br>(only chrome & need kaikas wallet)<br>(use kip-17,caver.js and make nft)
 											</a>
 										</div><!-- /.isotope-overlay -->
@@ -706,7 +709,7 @@
 									<div class="item">
 										<img src="assets/images/my/8.JPG" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="http://3.142.155.14/">
+											<a href="https://9mc3nfacgi.ap-northeast-1.awsapprunner.com/home">
 												GAMGWI
 											</a>
 										</div><!-- /.isotope-overlay -->
@@ -714,7 +717,7 @@
 									<div class="item">
 										<img src="assets/images/my/22.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="http://3.38.68.37:3003/admin/login_on?topmenu=administrator&submenu=%EA%B4%80%EB%A6%AC%EC%9E%90%EB%A6%AC%EC%8A%A4%ED%8A%B8">
+											<a href="https://github.com/ohmihee/projects">
 												학원사이트&관리자페이지
 											</a>
 										</div><!-- /.isotope-overlay -->
@@ -725,7 +728,7 @@
 									<div class="item">
 										<img src="assets/images/my/20.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="http://3.38.68.37:3001/">
+											<a href="https://github.com/ohmihee/projects">
 												HoneyAnt
 											</a>
 										</div><!-- /.isotope-overlay -->
