--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
 										<span class="progressText">aws</span>
-										<div>aws 서비스인 app runner, amplify, ec2를 통한 배포가 가능하며, rds를 사용할 수 있습니다.</div>
+										<div>aws 서비스인 app runner, amplify, ec2를 통한 배포가 가능하며, 그 외에 rds, s3, polly 등을 활용할 수 있습니다.</div>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="10" aria-valuemax="100" style="">
