--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
 									<div onclick="alert('해당 사이트는 카이카스 지갑 설치 후 이용가능합니다.')" class="item">
 										<img  src="assets/images/my/7.JPG" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="http://13.209.218.153:3000/">
+											<a href="http://52.79.83.134/">
 												NFT MARKET <br>(only chrome & need kaikas wallet)<br>(use kip-17,caver.js and make nft)
 											</a>
 										</div><!-- /.isotope-overlay -->
@@ -709,7 +709,7 @@
 									<div class="item">
 										<img src="assets/images/my/8.JPG" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a href="https://9mc3nfacgi.ap-northeast-1.awsapprunner.com/home">
+											<a href="http://43.200.188.182">
 												GAMGWI
 											</a>
 										</div><!-- /.isotope-overlay -->
